test/error/ConstructorAbstract.fu
public class Test
{
	public abstract Test() { //ERROR: Constructor cannot be abstract
	}
}
